[gd_scene load_steps=22 format=2]

[ext_resource path="res://Sprites/UI/Fonts/PaperJohnnyEins-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu's/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://Sprites/UI/ScreenUI/Icons/ic_options.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/ScreenUI/Icons/ic_resume_play.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/ScreenUI/Icons/ic_retry.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/ScreenUI/Icons/ic_checkpoint.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/ScreenUI/Icons/ic_mainmenu.png" type="Texture" id=7]
[ext_resource path="res://Menu's/TransparentOverlay.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sprites/UI/ScreenUI/Themes/UI_GeneralButtons_Theme.tres" type="Theme" id=9]
[ext_resource path="res://Sprites/UI/ScreenUI/PauseMenu/pause1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/UI/ScreenUI/PauseMenu/pause2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/UI/ScreenUI/PauseMenu/pause3.png" type="Texture" id=12]
[ext_resource path="res://Sprites/UI/ScreenUI/PauseMenu/z.png" type="Texture" id=13]
[ext_resource path="res://Menu's/SelectSound.tscn" type="PackedScene" id=14]
[ext_resource path="res://Menu's/SceneLoader.tscn" type="PackedScene" id=15]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "sleep",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.477419, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, -20, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
tangential_accel_random = 0.1
angle = 30.0
angle_random = 1.0
scale = 0.7
scale_random = 0.8
color_ramp = SubResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 30
extra_spacing_top = 6
font_data = ExtResource( 1 )

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="TransparentOverlay" parent="." instance=ExtResource( 8 )]

[node name="Pause1" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 10 )

[node name="GunkeyFace" type="AnimatedSprite" parent="."]
position = Vector2( 605.278, 385 )
scale = Vector2( 0.930555, 0.930556 )
frames = SubResource( 3 )
animation = "sleep"
playing = true

[node name="Sleep" type="Particles2D" parent="."]
position = Vector2( 232, 600 )
amount = 1
lifetime = 2.0
process_material = SubResource( 6 )
texture = ExtResource( 13 )

[node name="Underlay" type="ColorRect" parent="."]
visible = false
margin_left = 512.0
margin_right = 768.0
margin_bottom = 720.0
color = Color( 0.729412, 0.831373, 0.568627, 1 )

[node name="Title" type="Label" parent="."]
margin_left = 464.0
margin_top = 50.0
focus_neighbour_left = NodePath("../ButtonsContainer/Buttons/Resume/ResumeButton")
focus_neighbour_top = NodePath("../ButtonsContainer/Buttons/Resume/ResumeButton")
focus_neighbour_right = NodePath("../ButtonsContainer/Buttons/Resume/ResumeButton")
focus_neighbour_bottom = NodePath("../ButtonsContainer/Buttons/Resume/ResumeButton")
focus_mode = 2
custom_colors/font_color = Color( 0.0980392, 0.0431373, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Pause"
align = 1

[node name="ButtonsContainer" type="MarginContainer" parent="."]
margin_top = 176.0
margin_right = 1280.0
margin_bottom = 720.0
focus_mode = 2

[node name="Buttons" type="VBoxContainer" parent="ButtonsContainer"]
margin_right = 1280.0
margin_bottom = 544.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 1

[node name="Resume" type="ReferenceRect" parent="ButtonsContainer/Buttons"]
margin_right = 1280.0
margin_bottom = 108.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ResumeButton" type="Button" parent="ButtonsContainer/Buttons/Resume"]
margin_left = 520.0
margin_right = 760.0
margin_bottom = 96.0
focus_neighbour_top = NodePath("../../MainMenu/MainMenuButton")
focus_neighbour_bottom = NodePath("../../LastCheckpoint/LastCheckpointButton")
focus_next = NodePath("../../LastCheckpoint/LastCheckpointButton")
focus_previous = NodePath("../../MainMenu/MainMenuButton")
theme = ExtResource( 9 )
icon = ExtResource( 4 )
align = 0

[node name="ResumeButtonLabel" type="Label" parent="ButtonsContainer/Buttons/Resume/ResumeButton"]
margin_left = 98.0
margin_top = 1.0
margin_right = 208.0
margin_bottom = 96.0
custom_colors/font_color = Color( 0.333333, 0.270588, 0.211765, 1 )
custom_fonts/font = SubResource( 7 )
text = "Resume"
valign = 1

[node name="LastCheckpoint" type="ReferenceRect" parent="ButtonsContainer/Buttons"]
margin_top = 108.0
margin_right = 1280.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LastCheckpointButton" type="Button" parent="ButtonsContainer/Buttons/LastCheckpoint"]
margin_left = 520.0
margin_right = 760.0
margin_bottom = 96.0
focus_neighbour_top = NodePath("../../Resume/ResumeButton")
focus_neighbour_bottom = NodePath("../../Restart/RestartButton")
focus_next = NodePath("../../Restart/RestartButton")
focus_previous = NodePath("../../Resume/ResumeButton")
theme = ExtResource( 9 )
icon = ExtResource( 6 )

[node name="LastButtonLabel" type="Label" parent="ButtonsContainer/Buttons/LastCheckpoint/LastCheckpointButton"]
margin_left = 98.0
margin_top = 11.0
margin_right = 208.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0.333333, 0.270588, 0.211765, 1 )
custom_fonts/font = SubResource( 7 )
text = "Last"
valign = 1

[node name="CheckpointButtonLabel" type="Label" parent="ButtonsContainer/Buttons/LastCheckpoint/LastCheckpointButton"]
margin_left = 98.0
margin_top = 44.0
margin_right = 208.0
margin_bottom = 92.0
custom_colors/font_color = Color( 0.333333, 0.270588, 0.211765, 1 )
custom_fonts/font = SubResource( 7 )
text = "Flag"
valign = 1

[node name="Restart" type="ReferenceRect" parent="ButtonsContainer/Buttons"]
margin_top = 217.0
margin_right = 1280.0
margin_bottom = 326.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RestartButton" type="Button" parent="ButtonsContainer/Buttons/Restart"]
margin_left = 520.0
margin_right = 760.0
margin_bottom = 96.0
theme = ExtResource( 9 )
icon = ExtResource( 5 )
align = 0

[node name="RestartButtonLabel" type="Label" parent="ButtonsContainer/Buttons/Restart/RestartButton"]
margin_left = 98.0
margin_top = 1.0
margin_right = 208.0
margin_bottom = 96.0
custom_colors/font_color = Color( 0.333333, 0.270588, 0.211765, 1 )
custom_fonts/font = SubResource( 7 )
text = "Restart"
valign = 1

[node name="Options" type="ReferenceRect" parent="ButtonsContainer/Buttons"]
margin_top = 326.0
margin_right = 1280.0
margin_bottom = 435.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OptionsButton" type="Button" parent="ButtonsContainer/Buttons/Options"]
margin_left = 520.0
margin_right = 760.0
margin_bottom = 96.0
theme = ExtResource( 9 )
icon = ExtResource( 3 )
align = 0

[node name="OptionsButtonLabel" type="Label" parent="ButtonsContainer/Buttons/Options/OptionsButton"]
margin_left = 98.0
margin_top = 1.0
margin_right = 208.0
margin_bottom = 96.0
custom_colors/font_color = Color( 0.333333, 0.270588, 0.211765, 1 )
custom_fonts/font = SubResource( 7 )
text = "Options"
valign = 1

[node name="MainMenu" type="ReferenceRect" parent="ButtonsContainer/Buttons"]
margin_top = 435.0
margin_right = 1280.0
margin_bottom = 544.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainMenuButton" type="Button" parent="ButtonsContainer/Buttons/MainMenu"]
margin_left = 520.0
margin_right = 760.0
margin_bottom = 96.0
focus_neighbour_top = NodePath("../../Options/OptionsButton")
focus_neighbour_bottom = NodePath("../../Resume/ResumeButton")
theme = ExtResource( 9 )
icon = ExtResource( 7 )
align = 0

[node name="MainButtonLabel" type="Label" parent="ButtonsContainer/Buttons/MainMenu/MainMenuButton"]
margin_left = 98.0
margin_top = 11.0
margin_right = 208.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0.333333, 0.270588, 0.211765, 1 )
custom_fonts/font = SubResource( 7 )
text = "Main"
valign = 1

[node name="MenuButtonLabel" type="Label" parent="ButtonsContainer/Buttons/MainMenu/MainMenuButton"]
margin_left = 98.0
margin_top = 44.0
margin_right = 208.0
margin_bottom = 92.0
custom_colors/font_color = Color( 0.333333, 0.270588, 0.211765, 1 )
custom_fonts/font = SubResource( 7 )
text = "Menu"
valign = 1

[node name="SelectSound" parent="." instance=ExtResource( 14 )]
position = Vector2( 640, 0 )

[node name="AwakeTimer" type="Timer" parent="."]
one_shot = true

[node name="SleepTimer" type="Timer" parent="."]
one_shot = true

[node name="ScreenTransition" parent="." instance=ExtResource( 15 )]

[connection signal="visibility_changed" from="." to="." method="_on_PauseMenu_visibility_changed"]
[connection signal="button_up" from="ButtonsContainer/Buttons/Resume/ResumeButton" to="." method="_on_Resume_Game_Button_button_up"]
[connection signal="button_up" from="ButtonsContainer/Buttons/LastCheckpoint/LastCheckpointButton" to="." method="_on_LastCheckpointButton_button_up"]
[connection signal="button_up" from="ButtonsContainer/Buttons/Restart/RestartButton" to="." method="_on_Reset_Button_button_up"]
[connection signal="button_up" from="ButtonsContainer/Buttons/Options/OptionsButton" to="." method="_on_Options_Button_button_up"]
[connection signal="button_up" from="ButtonsContainer/Buttons/MainMenu/MainMenuButton" to="." method="_on_Main_Menu_Button_button_up"]
[connection signal="timeout" from="AwakeTimer" to="." method="_on_AwakeTimer_timeout"]
[connection signal="timeout" from="SleepTimer" to="." method="_on_SleepTimer_timeout"]
